New manual report and changed VOID to Celestials